--- a/index.html
+++ b/index.html
@@ -3,10 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Equalizer - Landing Page</title>
+  <meta name="description" content="We make your music sound extraordinary with our audio equalizer app.">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap">
+  <link rel="icon" href="./assets/bg-pattern-1.svg" type="image/svg+xml" sizes="any">
   <link rel="stylesheet" href="style.css">
+
+  <title>Equalizer - Landing Page</title>
 </head>
 <body>
-  
+
+  <header>
+    <div class="logo">
+      <img src="./assets/logo.svg" alt="Equalizer App Logo">
+    </div>
+    <div class="content">
+      <h1>We make your music sound extraordinary.</h1>
+      <div class="content_description">
+        A system audio equalizer specifically designed for Android and iOS. Freely tune the way your music sounds with a professional grade parametric EQ & volume mixer. Control bass, mids, treble, gain control, reverb, and more!
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section>
+      <div class="app_img">
+        <img src="./assets/illustration-app.png" alt="App mobile prototype">
+      </div>
+      <div class="app_promo">
+        <h2 class="app_promo_title">Premium EQ</h2>
+        <p class="app_promo_desc">
+          Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take your listening experience to a whole new level and access all our incredible features!
+        </p>
+        <p><span class="price">$4</span> <span>/ month</span></p>
+        <button><img src="./assets/icon-apple.svg" alt="Apple icon">iOS Download</button>
+        <button><img src="./assets/icon-android.svg" alt="Android icon">Android Download</button>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div class="logo">
+      <img src="./assets/logo.svg" alt="Equalizer App Logo">
+    </div>
+    <div class="contact">
+      <p>All rights reserved © Equalizer 2024</p>
+      <p>
+        Have any problems? Contact us via social media or email us at 
+        <a class="email_address" href="equalizer@example.com">equalizer@example.com</a>.</p>
+    </div>
+    <div class="socials">
+      <a href="#"><img src="./assets/icon-facebook.svg" alt="Facebook icon"></a>
+      <a href="#"><img src="./assets/icon-instagram.svg" alt="Instagram icon"></a>
+      <a href="#"><img src="./assets/icon-twitter.svg" alt="Twitter icon"></a>
+    </div>
+  </footer>
 </body>
 </html>
