--- a/index.html
+++ b/index.html
@@ -12,49 +12,65 @@
 </head>
 <body>
 
-  <header>
-    <div class="logo">
-      <img src="./assets/logo.svg" alt="Equalizer App Logo">
-    </div>
-    <div class="content">
-      <h1>We make your music sound extraordinary.</h1>
-      <div class="content_description">
-        A system audio equalizer specifically designed for Android and iOS. Freely tune the way your music sounds with a professional grade parametric EQ & volume mixer. Control bass, mids, treble, gain control, reverb, and more!
+  <header class="header">
+    <div class="wrapper">
+      <div class="logo">
+        <a href="#" class="logo_link">
+          <img class="logo_img" src="./assets/logo.svg" alt="Equalizer App Logo">
+        </a>
+      </div>
+      <div class="content">
+        <h1 class="content_title">We make your music sound extraordinary.</h1>
+        <div class="content_description">
+          A system audio equalizer specifically designed for Android and iOS. Freely tune the way your music sounds with a professional grade parametric EQ & volume mixer. Control bass, mids, treble, gain control, reverb, and more!
+        </div>
       </div>
     </div>
   </header>
 
   <main>
-    <section>
-      <div class="app_img">
-        <img src="./assets/illustration-app.png" alt="App mobile prototype">
-      </div>
-      <div class="app_promo">
-        <h2 class="app_promo_title">Premium EQ</h2>
-        <p class="app_promo_desc">
-          Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take your listening experience to a whole new level and access all our incredible features!
-        </p>
-        <p><span class="price">$4</span> <span>/ month</span></p>
-        <button><img src="./assets/icon-apple.svg" alt="Apple icon">iOS Download</button>
-        <button><img src="./assets/icon-android.svg" alt="Android icon">Android Download</button>
+    <section class="promo">
+      <div class="wrapper">
+        <div class="promo_bg"></div>
+        <div class="app_img">
+          <img src="./assets/illustration-app.png" alt="App mobile prototype">
+        </div>
+        <div class="app_promo_content">
+          <h2 class="app_promo_title">Premium EQ</h2>
+          <p class="app_promo_desc">
+            Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take your listening experience to a whole new level and access all our incredible features!
+          </p>
+          <div class="offer">
+            <p class="price">$4</p> 
+            <p>/ month</p>
+          </div>
+          <div class="app_buttons">
+            <button class="btn btn-dark">iOS Download</button>
+            <button class="btn btn-light">Android Download</button>
+          </div>
+        </div>
       </div>
     </section>
   </main>
 
-  <footer>
-    <div class="logo">
-      <img src="./assets/logo.svg" alt="Equalizer App Logo">
-    </div>
-    <div class="contact">
-      <p>All rights reserved © Equalizer 2024</p>
-      <p>
-        Have any problems? Contact us via social media or email us at 
-        <a class="email_address" href="equalizer@example.com">equalizer@example.com</a>.</p>
-    </div>
-    <div class="socials">
-      <a href="#"><img src="./assets/icon-facebook.svg" alt="Facebook icon"></a>
-      <a href="#"><img src="./assets/icon-instagram.svg" alt="Instagram icon"></a>
-      <a href="#"><img src="./assets/icon-twitter.svg" alt="Twitter icon"></a>
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="logo">
+        <a href="#" class="logo_link">
+          <img class="logo_img" src="./assets/logo.svg" alt="Equalizer App Logo">
+        </a>
+      </div>
+      <div class="footer_content">
+        <p>All rights reserved © Equalizer 2024</p>
+        <p>
+          Have any problems? Contact us via social media or email us at
+          <a class="email" href="equalizer@example.com">equalizer@example.com</a>.</p>
+      </div>
+      <div class="socials">
+        <a href="/" class="social social_fb"><span class="sr-only">Facebook</span></a>
+        <a href="/" class="social social_inst"><span class="sr-only">Instagram</span></a>
+        <a href="/" class="social social_tw"><span class="sr-only">Twitter</span></a>
+      </div>
     </div>
   </footer>
 </body>
