add styles for tablet

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <img class="logo_img" src="./assets/logo.svg" alt="Equalizer App Logo">
         </a>
       </div>
-      <div class="content">
-        <h1 class="content_title">We make your music sound extraordinary.</h1>
-        <div class="content_description">
+      <div class="header_content">
+        <h1 class="header_title">We make your music sound extraordinary.</h1>
+        <div class="header_description">
           A system audio equalizer specifically designed for Android and iOS. Freely tune the way your music sounds with a professional grade parametric EQ & volume mixer. Control bass, mids, treble, gain control, reverb, and more!
         </div>
       </div>
@@ -61,15 +61,19 @@
         </a>
       </div>
       <div class="footer_content">
-        <p>All rights reserved © Equalizer 2024</p>
-        <p>
-          Have any problems? Contact us via social media or email us at
-          <a class="email" href="equalizer@example.com">equalizer@example.com</a>.</p>
-      </div>
-      <div class="socials">
-        <a href="/" class="social social_fb"><span class="sr-only">Facebook</span></a>
-        <a href="/" class="social social_inst"><span class="sr-only">Instagram</span></a>
-        <a href="/" class="social social_tw"><span class="sr-only">Twitter</span></a>
+        <div class="contact">
+          <p>All rights reserved © Equalizer 2024</p>
+          <p>
+            Have any problems? Contact us via social media or email us at
+            <a class="email" href="equalizer@example.com">equalizer@example.com</a>.
+          </p>
+        </div>
+      
+        <div class="socials">
+          <a href="/" class="social social_fb"><span class="sr-only">Facebook</span></a>
+          <a href="/" class="social social_inst"><span class="sr-only">Instagram</span></a>
+          <a href="/" class="social social_tw"><span class="sr-only">Twitter</span></a>
+        </div>
       </div>
     </div>
   </footer>
