add index.html and style.css for gh-pages

--- a/index.html
+++ b/index.html
@@ -3,10 +3,79 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Equalizer - Landing Page</title>
+  <meta name="description" content="We make your music sound extraordinary with our audio equalizer app.">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap">
+  <link rel="icon" href="./assets/bg-pattern-1.svg" type="image/svg+xml" sizes="any">
   <link rel="stylesheet" href="style.css">
+
+  <title>Equalizer - Landing Page</title>
 </head>
 <body>
-  
+
+  <header class="header">
+    <div class="wrapper">
+      <div class="logo">
+        <a href="#" class="logo_link">
+          <img class="logo_img" src="./assets/logo.svg" alt="Equalizer App Logo">
+        </a>
+      </div>
+      <div class="header_content">
+        <h1 class="header_title">We make your music sound extraordinary.</h1>
+        <div class="header_description">
+          A system audio equalizer specifically designed for Android and iOS. Freely tune the way your music sounds with a professional grade parametric EQ & volume mixer. Control bass, mids, treble, gain control, reverb, and more!
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section class="promo">
+      <div class="wrapper">
+        <div class="promo_bg"></div>
+        <div class="app_img">
+          <img src="./assets/illustration-app.png" alt="App mobile prototype">
+        </div>
+        <div class="app_promo_content">
+          <h2 class="app_promo_title">Premium EQ</h2>
+          <p class="app_promo_desc">
+            Get expert-level control with a robust equalizer, volume mixer, and spatial audio. Take your listening experience to a whole new level and access all our incredible features!
+          </p>
+          <div class="offer">
+            <p class="price">$4</p> 
+            <p>/ month</p>
+          </div>
+          <div class="app_buttons">
+            <button class="btn btn-dark">iOS Download</button>
+            <button class="btn btn-light">Android Download</button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="wrapper">
+      <div class="logo">
+        <a href="#" class="logo_link">
+          <img class="logo_img" src="./assets/logo.svg" alt="Equalizer App Logo">
+        </a>
+      </div>
+      <div class="footer_content">
+        <div class="contact">
+          <p>All rights reserved © Equalizer 2024</p>
+          <p>
+            Have any problems? Contact us via social media or email us at
+            <a class="email" href="equalizer@example.com">equalizer@example.com</a>.
+          </p>
+        </div>
+      
+        <div class="socials">
+          <a href="/" class="social social_fb"><span class="sr-only">Facebook</span></a>
+          <a href="/" class="social social_inst"><span class="sr-only">Instagram</span></a>
+          <a href="/" class="social social_tw"><span class="sr-only">Twitter</span></a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
